2013-01-30  ------ inet-2.1.0 released ------

2012-08-07  ------ inet-2.0.0 released ------

2012-06-25  ------ inet-1.99.5 released ------

2012-06-15  Zoltan Bojthe

	- InterfaceEntry constructor changed: Now it stores a pointer to related 
	  interface module

	- InterfaceTable uses the stored interfaceModule ptr in InterfaceEntry instead
	  of taking it as a parameter
	  
	- modified gate/connection validation in InterfaceTable

	- bugfix: cGate::getDisplayString() has a side effect by creating an
	  empty channel when there was no channel attached to the gate previously.
	  solution: if no channel is connected to the gate do not call the getDisplayString()
	  method at all.

2012-04-13  Tamas Borbely

	Added getInterfaceByInterfaceModule(cModule*) method to InterfaceTable.
	It returns the InterfaceEntry* that belongs to the interface
	containing the specified module.

2012-03-20  ------ inet-1.99.4 released ------

2012-03-04  Levente Meszaros

   Added "displayAddresses" parameter to InterfaceTable. Setting it to true
   will display all IP addresses on the connected links.

2012-02-14  Tamas Borbely

	Added getFirstMulticastInterface() to the InterfaceTable

2012-02-24  ------ inet-1.99.3 released ------

2012-01-31  Andras Varga

	InterfaceEntry: const changes

2012-01-12  Andras Varga

	InterfaceTable: added getHostModule() method

2011-11-18  ------ INET-1.99.2 released ------

2011-11-13  Levente Meszaros, Zoltan Bojthe

	Refactored operator= and copy constructor in all INET classes.
	See base/ChangeLog for details.

2011-09-16  Zoltan Bojthe

	fixes for bug #137: order of modules in ned leads to segfault in
	inet-EtherMacBase/InterfaceTable

	I added a test for InterfaceTable::addInterface() function
	for checking initialization of 'nb' member. When 'nb' is NULL, the
	InterfaceTable not yet initialized ('nb' setted in stage 0).

2011-11-04  Zoltan Bojthe

	IPv6 comment

2011-09-14  Zoltan Bojthe

	bug #347: fixes some compiler warnings.
