@@ -1,3 +1,7 @@
+2013-05-15  Alfonso Ariza - takover from INETMANET
+
+	Delete the prtocol specific data when the interface entry is deleted.
+
 2013-01-30  ------ inet-2.1.0 released ------
 
 2012-08-07  ------ inet-2.0.0 released ------
